--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-       <h2>bernoo</h2>
+       <h2>bernoo is noob</h2>
         <script src="" async defer></script>
     </body>
 </html>
